--- a/Client/tracker/src/style.css
+++ b/Client/tracker/src/style.css
@@ -51,7 +51,7 @@ input[type="text"] {
   height: auto;
   width: 75%;
   border-radius: 15px;
-  padding: 20px;
+  padding: 20px 0px;
   z-index: 10000;
 }
 
@@ -63,6 +63,6 @@ input[type="text"] {
 }
 
 .flex-item {
-  padding: 10px;
+  padding: 10px 0px;
   flex: 50%;
 }
